--- a/Darky/DarkMode Switcher/Info.plist
+++ b/Darky/DarkMode Switcher/Info.plist
@@ -26,6 +26,8 @@
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
 	<key>NSAppleScriptEnabled</key>
 	<true/>
+    <key>NSAppleEventsUsageDescription</key>
+    <string>Needed to send Apple Events to the system</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2018 Mohamed ARRADI. All rights reserved.</string>
 	<key>NSMainNibFile</key>
