--- a/Darky/DarkMode Switcher/Info.plist
+++ b/Darky/DarkMode Switcher/Info.plist
@@ -26,13 +26,17 @@
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
 	<key>NSAppleScriptEnabled</key>
 	<true/>
-    <key>NSAppleEventsUsageDescription</key>
-    <string>Needed to send Apple Events to the system</string>
+	<key>NSAppleEventsUsageDescription</key>
+	<string>Needed to send Apple Events to the system</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2018 Mohamed ARRADI. All rights reserved.</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>CFBundleDisplayName</key>
+	<string></string>
+	<key>LSUIElement</key>
+	<true/>
 </dict>
 </plist>
